{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerMaps",
            "id": "d0d091dc-7f01-4aa6-a836-5622ece5fa28",
            "actions": [
                {
                    "name": "Movement1",
                    "type": "Value",
                    "id": "3e40d65a-e80d-400a-abdb-eaaecab63c55",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement2",
                    "type": "Value",
                    "id": "5b46ecc8-c673-4680-a1c4-363b77931125",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump1",
                    "type": "Button",
                    "id": "1abeb34f-daeb-4d6a-adb9-6594bd192281",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump2",
                    "type": "Button",
                    "id": "b8aea9ae-2767-433d-8dd7-aa719309beda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "ASD",
                    "id": "7d47b2d3-2831-4dd7-9c22-0f6a4e3522c7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "8b3f4483-4c11-420e-9f23-2621b43e2659",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8789ff4f-723c-43e8-a314-061f44646545",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9f458ca8-7221-46e8-aa08-9a1d565d7de3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Setas",
                    "id": "f6c08c96-a2a9-4f7f-b8cf-666d751a9da6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "4548cd2d-39f2-457e-8c1a-23dd6b7b028a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC controller",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9d3e0e35-185a-4345-b3e2-e6176beb85c8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC controller",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "00b2aff7-1847-4a9c-b813-9ca665e5c84e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC controller",
                    "action": "Movement2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7419bd1a-1a35-4f6e-ae15-12a9950e1e73",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC controller",
                    "action": "Jump1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44bc82f0-de7d-47e5-b2b8-4165709fc59a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC controller",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC controller",
            "bindingGroup": "PC controller",
            "devices": []
        }
    ]
}